tests/fixtures/invalid/bytes_notin_none.py
# Cannot use 'not in' with Bytes and None
x: bool = b"hello" not in None
